# s02-ti2-e02

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  cspell.json  flake.nix
scripts/: generate-eclipse-project.sh
sql/: creation.sql
src/main/java/cli/: BUILD.bazel  Main.java
src/main/java/core/users/: BUILD.bazel  User.java  UserDAO.java
src/main/java/lib/: BUILD.bazel  Database.java
